--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chekin/sdk",
+  "name": "@chekin/host-sdk",
   "version": "1.0.0",
   "description": "Framework-agnostic Chekin SDK for host management",
   "type": "module",
