--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chekin/sdk-react",
+  "name": "@chekin/host-sdk-react",
   "version": "1.0.0",
   "description": "React components for Chekin SDK",
   "type": "module",
@@ -35,7 +35,7 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@chekin/sdk": "*",
+    "@chekin/host-sdk": "*",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
