--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,9 @@
   "name": "@chekin/host-sdk",
   "version": "1.0.0",
   "description": "Framework-agnostic Chekin SDK for host management",
+  "author": "vlad-svr",
+  "license": "MIT",
+  "repository": "invibeme/chekin-host-sdk",
   "type": "module",
   "private": false,
   "main": "./dist/index.js",
@@ -21,19 +24,22 @@
     "chekin",
     "sdk",
     "host",
-    "management",
-    "iframe",
-    "typescript"
+    "management"
   ],
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
     "prepublishOnly": "nx build core"
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "tsup": "^8.0.0"
+    "tslib": "^2.3.0",
+    "@vitest/coverage-v8": "^3.0.0",
+    "jsdom": "~22.1.0",
+    "tsup": "^8.0.0",
+    "vitest": "^3.0.0"
   }
 }
