--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@chekin/host-sdk-react",
   "version": "1.0.0",
-  "description": "React components for Chekin SDK",
+  "description": "Chekin Host SDK integration for React apps",
+  "author": "vlad-svr",
+  "license": "MIT",
+  "repository": "invibeme/chekin-host-sdk",
   "type": "module",
   "private": false,
   "main": "./dist/index.js",
@@ -22,8 +25,7 @@
     "sdk",
     "react",
     "host",
-    "management",
-    "components"
+    "management"
   ],
   "scripts": {
     "build": "tsup",
@@ -35,10 +37,10 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@chekin/host-sdk": "*",
-    "tslib": "^2.3.0"
+    "@chekin/host-sdk": "*"
   },
   "devDependencies": {
+    "tslib": "^2.3.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.0.0",
