--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nx/eslint": "21.3.7",
-    "@nx/eslint-plugin": "21.3.7",
-    "@nx/js": "^21.3.7",
-    "@nx/react": "^21.3.7",
-    "@nx/vite": "^21.3.7",
-    "@nx/web": "21.3.7",
-    "@nx/workspace": "^21.3.7",
+    "@nx/eslint": "21.4.1",
+    "@nx/eslint-plugin": "21.4.1",
+    "@nx/js": "21.4.1",
+    "@nx/react": "21.4.1",
+    "@nx/vite": "21.4.1",
+    "@nx/web": "21.4.1",
+    "@nx/workspace": "21.4.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -46,8 +46,8 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "^21.3.7",
-    "prettier": "^2.6.2",
+    "nx": "21.4.1",
+    "prettier": "^3.6.2",
     "tslib": "^2.3.0",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
@@ -57,9 +57,5 @@
   },
   "nx": {
     "includedScripts": []
-  },
-  "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
   }
 }
