--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typecheck": "nx run-many --target=typecheck --all",
     "clean": "nx reset",
     "publish:core": "nx publish core",
-    "publish:react": "nx publish react"
+    "publish:react": "nx publish react",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -43,9 +44,11 @@
     "@vitest/ui": "^3.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "husky": "^9.1.7",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
+    "lint-staged": "^16.1.5",
     "nx": "21.4.1",
     "prettier": "^3.6.2",
     "tslib": "^2.3.0",
