--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,7 @@
 {
-  "*.{ts,tsx,js,jsx}": [
-    "nx affected --target=lint --fix",
-    "nx affected --target=typecheck"
+  "**/*.+(jsx|js|ts|tsx)": [
+    "prettier --write --ignore-unknown",
+    "nx affected --target=lint --fix"
   ],
-  "*.{json,md,html,css}": ["prettier --write"]
+  "**/*.{json,md,html,css}": ["prettier --write --ignore-unknown"]
 }
