--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,14 +7,17 @@
   "repository": "invibeme/chekin-host-sdk",
   "type": "module",
   "private": false,
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
