--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,8 +14,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "chekin-host-sdk": ["packages/core/src/index.ts"],
-      "chekin-host-sdk-react": ["packages/react/src/index.ts"]
+      "@chekinapp/host-sdk": ["packages/core/src/index.ts"],
+      "@chekinapp/host-sdk-react": ["packages/react/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
