--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chekin-host-sdk",
-  "version": "1.0.8",
+  "name": "@chekinapp/host-sdk",
+  "version": "0.1.0",
   "description": "Framework-agnostic Chekin SDK for host management",
   "author": "vlad-svr",
   "license": "MIT",
