--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chekinapp/host-sdk",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Framework-agnostic Chekin SDK for host management",
   "author": "vlad-svr",
   "license": "MIT",
@@ -10,7 +10,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "./dist/index.cjs",
+  "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
